# Technologies-of-Programming-4th-semester-Codegen-and-Other

./: README.md
Codegen/: CMakeLists.txt  main.cpp
Codegen/CatsServer/dto/: CatClientToServerDto.h
Codegen/CatsServer/entities/: CatsOwner.cpp  Color.h
Codegen/CatsServer/server/: CatsServer.cpp
Codegen/CatsServer/tools/: CatsJsonSerializationFactory.cpp  ICatsSerializationFactory.h
Codegen/CatsServer/tools/deserializers/: CatsJsonDeserializer.cpp  CatsJsonDeserializer.h  ICatsDeserializer.h
Codegen/CatsServer/tools/serializers/: CatsJsonSerializer.cpp  CatsJsonSerializer.h  ICatsSerializer.h
Codegen/ClientGenerator/ClientGenerator/: ArithmeticBackup.txt  Calculator.cs  ClassFieldsFinder.cs  ClientGenerator.csproj  ClientGenerator.sln  JavaLexer.g4  JavaParser.g4  MethodInfoFinder.cs  Program.cs  SemanticModelService.cs  TextFile1.txt
Codegen/ClientGenerator/ClientGenerator/Entities/: ClassField.cs  ClassWithFields.cs  FormalParameter.cs  HttpMethodAnnotation.cs  MethodDeclaration.cs  SemanticModel.cs  TypeTree.cs
Codegen/ClientGenerator/GeneratedClient/: Cat.cs  CatToServerDto.cs  CatsOwner.cs  CatsOwnerToServerDto.cs  CatsServer.cs  Color.cs  DateTime.cs
Codegen/ClientGenerator/RealClientGenerator/: Program.cs  RealClientGenerator.csproj
Codegen/cats-server/: pom.xml
Codegen/dto/: CatServerToClientDto.h  CatsOwnerClientToServerDto.h
Codegen/entities/: Cat.cpp  Cat.h  CatsOwner.h  Color.cpp
Codegen/server/: CatsServer.h
Codegen/services/: CatsService.cpp  CatsService.h  ICatsService.h
Codegen/tools/: CatsJsonSerializationFactory.h
(+84 files in other folders)
